# mystical-creatures-api

./: .gitignore  db.sqlite3  docker-compose.yml  heroku.yml  manage.py  pyproject.toml  requirements.txt
creatures/: models.py  serializers.py  urls.py  views.py
creatures/migrations/: 0001_initial.py
mystical_creatures_api/: asgi.py  settings.py  urls.py  wsgi.py
